# uv_project

./: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
app/: constants.py  main.py
app/api/v1/routers/: _mongo.py  file_upload.py
app/core/: config.py  logging.py
app/db/: mongodb.py  qdrantdb.py
app/prompts/: budgets.py  prompts_manager.py  register.py
app/providers/llm/: gemini.py
app/schemas/: __init__.py  error_response.py  validations.py
app/services/: mongo_services.py  process_documents.py
app/tests/: test_main.py
app/utils/: dependency.py  helper.py
logs/: application.log.2025-06-27  application.log.2025-06-30  application.log.2025-07-01  application.log.2025-07-02  application.log.2025-07-03
